Having trouble checking changes in , because I forced an svn mv on easel.h.in and esl_ssi.h.in while they had local changes. don't do that again!
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@99 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -82,8 +82,8 @@ clean:
 distclean:
 	(cd documentation; make distclean)
 	(cd miniapps; make distclean)
+	-rm esl_config.h
 	make clean
-	-rm easel.h
 	-rm -rf autom4te.cache
 	-rm Makefile
 
