ssi rough draft done; still to be compiled & debugged, needs a test driver, and docs need proofed.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@102 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -27,6 +27,7 @@ HEADERS = \
 	esl_random.h\
 	esl_regexp.h\
 	esl_sqio.h\
+	esl_ssi.h\
 	esl_stack.h\
 	esl_stats.h\
 	esl_stopwatch.h\
@@ -54,6 +55,7 @@ OBJS    = \
 	esl_random.o\
 	esl_regexp.o\
 	esl_sqio.o\
+	esl_ssi.o\
 	esl_stack.o\
 	esl_stats.o\
 	esl_stopwatch.o\
