ssi now compiles. Still need to test.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@103 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -33,6 +33,9 @@
 /* Types
  * Make sure we have C99-standard fixed-width unsigned types
  */
+#undef HAVE_UINT16_T
+#undef HAVE_UINT32_T
+#undef HAVE_UINT64_T
 #undef ESL_UINT16
 #undef ESL_UINT32
 #undef ESL_UINT64
