added esl_sq_CreateFrom(); started testsuite.sqc, which compiles/runs 17 module test drivers.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@105 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -19,5 +19,8 @@ ALL:  ${PROGS}
 $(PROGS): %: %.o ../libeasel.a
 	cc -o $@ -L ${EASELLIB} $@.o -leasel -lm
 
+check:
+	./sqc 2 testsuite.sqc .
+
 clean:
-	-rm -f *.o *~ ${PROGS}
+	-rm -f *.o *~ ${PROGS} testdriver
