vectorops: D2F(), etc added. random: test driver written, and added to test suite. still working on ssi test driver.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@110 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -74,6 +74,9 @@ libeasel.a: $(OBJS)
 	$(RANLIB) libeasel.a
 	chmod 644 libeasel.a
 
+check:
+	(cd testsuite; make check)
+
 clean:
 	-rm -f ${OBJS} libeasel.a
 	-rm -f *~ TAGS
