dmatrix module updated. test driver and example driver added. autodoc_functions now has -t option to dump draft API table;   adds hyperlinks and hypertargets for function APIs;   and it tolerates {} in function documentation, so math   formatting is much easier now.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@116 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -5,6 +5,7 @@
 APITEX =  easel\
 	  esl_alphabet\
 	  esl_dirichlet\
+	  dmatrix\
 	  esl_exponential\
 	  esl_fileparser\
 	  esl_gamma\
@@ -35,6 +36,7 @@ APITEX =  easel\
 AUTOTEX = easel\
 	  esl_alphabet\
 	  esl_dirichlet\
+	  dmatrix\
 	  esl_exponential\
 	  esl_fileparser\
 	  esl_gamma\
