distance module pretty much done, including test and example code.
Overhauled error handling: now just two macros, ESL_FAIL (3-step
w/ garbage collection) and ESL_ERROR (2-step); and all allocations
go through ESL_ALLOC or ESL_RALLOC.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@119 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,6 +12,7 @@ HEADERS = \
 	easel.h\
 	esl_alphabet.h\
 	esl_dirichlet.h\
+	esl_distance.h\
 	esl_dmatrix.h\
 	esl_exponential.h\
 	esl_fileparser.h\
@@ -41,6 +42,7 @@ OBJS    = \
 	easel.o\
 	esl_alphabet.o\
 	esl_dirichlet.o\
+	esl_distance.o\
 	esl_dmatrix.o\
 	esl_exponential.o\
 	esl_fileparser.o\
