Picking up work again at Janelia, starting with the alphabet module: adding a 'missing data' character.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@121 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -1,3 +1,6 @@
+CEXCERPT = ../../ssdk/cexcerpt
+
+
 # Each module should have .tex documentation of its API,
 # in addition to the .c and .h files. The list of modules
 # that actually comply follows:
@@ -75,8 +78,8 @@ autodoc:
 cexcerpt:
 	mkdir -p cexcerpts
 	for module in ${AUTOTEX}; do\
-	   ~/src/ssdk/cexcerpt ../$$module.c cexcerpts;\
-	   ~/src/ssdk/cexcerpt ../$$module.h cexcerpts;\
+	   ${CEXCERPT} ../$$module.c cexcerpts;\
+	   ${CEXCERPT} ../$$module.h cexcerpts;\
 	done
 
 clean:
