--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -27,11 +27,9 @@
 #undef _LARGE_FILES
 #undef _LARGEFILE_SOURCE
 
-
 /* Debugging verbosity (0=none;3=most verbose)
  */
 #undef eslDEBUGLEVEL
-
 
 /* System headers
  */
@@ -39,33 +37,14 @@
 #undef HAVE_STDINT_H
 #undef HAVE_INTTYPES_H
 
-#ifdef HAVE_STDINT_H	
-#include <stdint.h>
-#endif
-#ifdef HAVE_INTTYPES_H
-#include <inttypes.h>
-#endif
-
 /* Types
- * Make sure we have C99-standard fixed-width unsigned types
  */
-#undef HAVE_UINT16_T
-#undef HAVE_UINT32_T
-#undef HAVE_UINT64_T
-
-#ifndef HAVE_UINT16_T
-#undef ESL_UINT16
-typedef ESL_UINT16 uint16_t;
-#endif
-#ifndef HAVE_UINT32_T
-#undef ESL_UINT32
-typedef ESL_UINT32 uint32_t; 
-#endif
-#ifndef HAVE_UINT64_T
-#undef ESL_UINT64
-typedef ESL_UINT64 uint64_t; 
-#endif
-
+#undef WORDS_BIGENDIAN
+#undef uint8_t
+#undef uint16_t
+#undef uint32_t
+#undef uint64_t
+#undef off_t
 
 /* Functions
  */
