--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -48,6 +48,7 @@
 
 /* Functions
  */
+#undef HAVE_MKSTEMP
 #undef HAVE_POPEN
 #undef HAVE_STRCASECMP
 #undef HAVE_TIMES
@@ -59,15 +60,16 @@
  * If you grab a single module from Easel to use it by itself,
  * leave all these #undef'd; you have no augmentations.
  * 
- * If you grab additional Easel .c files, you can enable their
+ * If you grab additional Easel .c files, you can enable any
  * augmentations they provide to other modules by #defining the
  * modules you have below. Alternatively, you can -D them on
  * the compile line, as in cc -DeslAUGMENT_SSI -DeslAUGMENT_MSA.
  * 
  * If you compile and install the complete Easel library, all of these
- * get #defined automatically by ./configure. So, if you steal files
- * from an installed library, just set these all back to #undef
- * (depending on which files you have).
+ * get #defined automatically by ./configure, plus the eslLIBRARY flag
+ * which means the full library with all augmentations is
+ * available. So, if you steal files from an installed library, just
+ * set these all back to #undef (depending on which files you have).
  *****************************************************************/
 
 #undef eslAUGMENT_ALPHABET
@@ -75,12 +77,13 @@
 #undef eslAUGMENT_GEV
 #undef eslAUGMENT_GUMBEL
 #undef eslAUGMENT_HISTOGRAM
-/* #undef eslAUGMENT_KEYHASH  */ /* not yet! no keyhash module yet. */
+#undef eslAUGMENT_KEYHASH 
 #undef eslAUGMENT_MINIMIZER
 #undef eslAUGMENT_MSA		
 #undef eslAUGMENT_RANDOM
+#undef eslAUGMENT_SSI
 #undef eslAUGMENT_STATS
-
+#undef eslLIBRARY
 
 #endif /*ESL_CONFIG_INCLUDED*/
 /*****************************************************************
