Started the phylogeny section, with distance and tree modules. Added distance unit tests. Added many (but not all) alphabet unit tests.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@127 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -116,6 +116,7 @@ AC_ARG_ENABLE(modular,
   [
     AC_MSG_NOTICE([Compiling the full Easel library, with all augmentations.])
     AC_DEFINE(eslAUGMENT_ALPHABET)
+    AC_DEFINE(eslAUGMENT_DMATRIX)
     AC_DEFINE(eslAUGMENT_FILEPARSER)
     AC_DEFINE(eslAUGMENT_GEV)
     AC_DEFINE(eslAUGMENT_GUMBEL)
