--- a/Makefile.in
+++ b/Makefile.in
@@ -34,6 +34,7 @@ HEADERS = \
 	esl_stats.h\
 	esl_stopwatch.h\
 	esl_stretchexp.h\
+	esl_tree.h\
 	esl_vectorops.h\
 	esl_weibull.h\
 	esl_wuss.h
@@ -64,6 +65,7 @@ OBJS    = \
 	esl_stats.o\
 	esl_stopwatch.o\
 	esl_stretchexp.o\
+	esl_tree.o\
 	esl_vectorops.o\
 	esl_weibull.o\
 	esl_wuss.o
@@ -84,13 +86,15 @@ check:
 clean:
 	-rm -f ${OBJS} libeasel.a
 	-rm -f *~ TAGS
+	-rm -f *.gcno *.gcda *.gcov
 	-rm -f core.[0-9]*
 	-rm -f config.log config.status
-	-rm -f example test stats
+	-rm -f example test testdrive stats
 
 distclean:
 	(cd documentation; make distclean)
-	(cd miniapps; make distclean)
+	(cd testsuite;     make distclean)
+	(cd miniapps;      make distclean)
 	-rm esl_config.h
 	make clean
 	-rm -rf autom4te.cache
