Sequence weighting algorithms now in. Added msaweight and msacluster modules. codestyle.tex started in the documentation.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@130 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -26,6 +26,8 @@ HEADERS = \
 	esl_minimizer.h\
 	esl_mixgev.h\
 	esl_msa.h\
+	esl_msacluster.h\
+	esl_msaweight.h\
 	esl_random.h\
 	esl_regexp.h\
 	esl_sqio.h\
@@ -57,6 +59,8 @@ OBJS    = \
 	esl_minimizer.o\
 	esl_mixgev.o\
 	esl_msa.o\
+	esl_msacluster.o\
+	esl_msaweight.o\
 	esl_random.o\
 	esl_regexp.o\
 	esl_sqio.o\
