getopts: added esl_opt_IsSet(). easel.h: added eslENORESULT error code; increased precision of eslCONST_GOLD configure.ac: add check for sys/types.h (HAVE_SYS_TYPES_H) for ssi and sqio esl_normal (Gaussian) module in progress - added to svn but not compiled yet
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@144 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -211,6 +211,7 @@ CHECK_GNU_MAKE
 
 # 6. Checks for header files.
 #    Defines preprocessor symbols like HAVE_UNISTD_H
+AC_CHECK_HEADERS([sys/types.h])
 AC_CHECK_HEADERS([unistd.h])
 AC_CHECK_HEADERS([stdint.h])
 AC_CHECK_HEADERS([inttypes.h])
