Added driver_report.pl, coverage_report.pl, and valgrind_report.pl to automate testing of driver compilation, test code coverage (gcov) and memory leaks (valgrind).
Fixed several problems that these scripts detected.

"make dcheck" now runs all three, plus unit tests, and generates one
unified report in testsuite/dcheck.report.

xref J1/12-13


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@155 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -84,8 +84,13 @@ libeasel.a: $(OBJS)
 	$(RANLIB) libeasel.a
 	chmod 644 libeasel.a
 
+# `make check`: run user testsuite
 check:
 	(cd testsuite; make check)
+
+# `make dcheck`: run developer testsuite, save output in testsuite/dcheck.report
+dcheck:
+	(cd testsuite; make dcheck)
 
 clean:
 	-rm -f ${OBJS} libeasel.a
