ratematrix module added: adapted from ratematrix.[ch] paml module added: adapted from bioparse_paml.[ch] wag.dat added to formats/ dir upgraded codestyle.tex to an embryonic "Developer's Guide" chapter added some convenience functions to dmatrix (Min, Max, MinMax, Sum) added GSL Morph and Demorph interoperability in dmatrix; WITH_LIBGSL flag configure.ac has --with-gsl option (will expand later to include atlas, blas, lapack?) Working on matrix exponentiation (dmx_Exp) and eigensystems (dmx_Diagonalize), and very unhappy with it all.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@158 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -2,11 +2,14 @@
 # Makefile for Easel
 # SVN $Id$
 
-CC      = @CC@
-CFLAGS  = @CFLAGS@
-AR      = @AR@ rcv
-LN      = ln
-RANLIB  = @RANLIB@
+CC       = @CC@
+CFLAGS   = @CFLAGS@
+AR       = @AR@ rcv
+LN       = ln
+RANLIB   = @RANLIB@
+LDFLAGS  = @LDFLAGS@
+CPPFLAGS = @CPPFLAGS@
+LIBGSL   = @LIBGSL@
 
 HEADERS = \
 	easel.h\
@@ -28,7 +31,9 @@ HEADERS = \
 	esl_msa.h\
 	esl_msacluster.h\
 	esl_msaweight.h\
+	esl_paml.h\
 	esl_random.h\
+	esl_ratematrix.h\
 	esl_regexp.h\
 	esl_sqio.h\
 	esl_ssi.h\
@@ -61,7 +66,9 @@ OBJS    = \
 	esl_msa.o\
 	esl_msacluster.o\
 	esl_msaweight.o\
+	esl_paml.o\
 	esl_random.o\
+	esl_ratematrix.o\
 	esl_regexp.o\
 	esl_sqio.o\
 	esl_ssi.o\
