Working on Yu/Altschul algorithm, esl_scorematrix_ReverseEngineer(), and the unit test for it. Not happy with numerical accuracy. Also, matrix inversion is failing for small choices of lambda.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@165 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -35,6 +35,7 @@ HEADERS = \
 	esl_random.h\
 	esl_ratematrix.h\
 	esl_regexp.h\
+	esl_rootfinder.h\
 	esl_scorematrix.h\
 	esl_sqio.h\
 	esl_ssi.h\
@@ -71,6 +72,7 @@ OBJS    = \
 	esl_random.o\
 	esl_ratematrix.o\
 	esl_regexp.o\
+	esl_rootfinder.o\
 	esl_scorematrix.o\
 	esl_sqio.o\
 	esl_ssi.o\
