esl-alistat miniapp added other miniapps brought up to date opt_,ret_ return arguments beginning to be distinguished use of "const" qualifiers beginning to take hold (documentation updated (codestyle.tex) to reflect the above two lines ) GuessAlphabet() functions in alphabet,sqio,msa written/tested CAverageID() and XAverageID() in distance scorematrix: Probify() and ProbifyGivenBG().
xref J1/61-62.


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@187 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -19,7 +19,8 @@ ESLINCDIR = -I..
 
 ## list of the miniapps to compile.
 #
-PROGS = esl-compstruct\
+PROGS = esl-alistat\
+	esl-compstruct\
 	esl-histplot\
 	esl-reformat
 
