Added the esl-afetch miniapp.
stats:   added esl_stats_LinearRegression(), and unit tests.
msa:     added esl_msafile_PositionByKey() for using SSI indexing.
getopts: altered esl_opt_GetArg(); now you ask for argument by number

xref J1/70.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@189 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -132,8 +132,8 @@ distclean:
 	-rm -rf autom4te.cache
 	-rm Makefile
 
-tags:
-	etags *.[ch] Makefile
+TAGS:
+	etags *.[ch] Makefile.in
 
 
 # magic SVN for setting keyword ID replacement on a new module foo:
