msa: Added MPI support (no testing yet). Working on merging the configure.ac with HMMER's, so HMMER can do a single ./configure.
This version of Easel doesn't compile.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@190 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -194,6 +194,30 @@ AC_ARG_WITH([gsl],
             ],
 	    [with_gsl=no])
 
+# --enable-mpi       Enable MPI parallelization
+# 
+# Sets MPILIBS output variable
+# Sets CC to appropriate compiler wrapper for MPI (mpicc, usually)
+# Defines HAVE_MPI preprocessor variable.
+#
+AC_ARG_ENABLE(mpi, 
+[AS_HELP_STRING([--enable-mpi], [enable MPI parallelization])],
+[case $enable_mpi in
+   yes) ACX_MPI([
+           AC_MSG_NOTICE([enabled optional MPI parallelization])
+	   AC_DEFINE(HAVE_MPI)
+	   CC=$MPICC
+          ], [
+           AC_MSG_ERROR([MPI library not found])
+          ])
+	 ;;
+   no)   AC_MSG_NOTICE([MPI parallelization disabled])
+         ;;
+   *)    echo "Ignoring unknown argument to --enable-mpi: $enable_mpi"
+	 ;;
+esac])
+
+
 ################################################################
 # 4. Checks for programs
 ################################################################
