'make etags' now makes a deeper TAGS file. esl_stats_Mean turned into esl_stats_{D,F}Mean(). esl_histplot miniapp outputs (commented) mu, lambda for fits.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@195 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -136,7 +136,7 @@ distclean:
 	-rm Makefile
 
 TAGS:
-	etags *.[ch] Makefile.in
+	etags *.c *.h *.tex documentation/*.tex miniapps/*.c miniapps/*.man Makefile.in
 
 
 # magic SVN for setting keyword ID replacement on a new module foo:
