Important bugfix in esl_histogram.c: off by one error in GetByRank()
esl_histogram_PlotSurvival() modified to always plot the highest
score, if it's binned with one or more other scores, so plots don't
look truncated.





git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@197 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -6,13 +6,13 @@
 # SRE, Mon Jun 11 08:19:32 2007 [Janelia]
 # SVN $Id$
 
-CC       = gcc -std=gnu99
+CC       = mpicc
 CFLAGS   = -g -O2 
 CPPFLAGS = 
 LDFLAGS  = 
 DEFS     = -DHAVE_CONFIG_H
 LIBS     =  -lm
-MPILIBS  = 
+MPILIBS  =  
 
 AR      = /usr/bin/ar rcv
 RANLIB  = ranlib
