o esl_getopts.c: esl_opt_VerifyConfig() behavior slightly changed:   it is now legal for option '-x' can now be in it's own list of   incompatible options.
o miniapps/esl-alimanip: miniapp to manipulate an alignment. Current
  options include 1) annotating RF markup as gap/non-gap based on 
  frequency of gaps in each column., 2) stripping all gap or non-gap
  RF columns from the alignment, 3) merge two alignments with the 
  same number of non-gap RF columns, 4) impose consensus secondary
  structure onto individual sequences to get individual secondary 
  structures.

o miniapps/Makefile: esl-alimanip miniapp is now built.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@201 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -23,7 +23,8 @@ PROGS = esl-afetch\
 	esl-alistat\
 	esl-compstruct\
 	esl-histplot\
-	esl-reformat
+	esl-reformat\
+	esl-alimanip
 
 ## Targets defining how to make miniapp executables.
 #
