Fixed a bug in esl-reformat: it wouldn't deal with converting stockholm to fasta.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@203 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -6,8 +6,8 @@
 # SRE, Mon Jun 11 08:19:32 2007 [Janelia]
 # SVN $Id$
 
-CC       = gcc -std=gnu99
-CFLAGS   = -g -O2 
+CC       = gcc
+CFLAGS   = -g -Wall
 CPPFLAGS = 
 LDFLAGS  = 
 DEFS     = -DHAVE_CONFIG_H
