--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -6,7 +6,7 @@
 # SRE, Mon Jun 11 08:19:32 2007 [Janelia]
 # SVN $Id$
 
-CC       = gcc -std=gnu99
+CC       = gcc
 CFLAGS   = -g -O2
 CPPFLAGS = 
 LDFLAGS  = 
